# fastrie

./: Cargo.toml
bench/: Cargo.toml  build.rs  entities.html
bench/src/: direct_trie.rs  hashmap_trie.rs  main.rs
src/: lib.rs  tests.rs
