[package]
name = "fastrie"
description = "Sequentialised memory-packed associative tries, buildable at compile time, useful for longest prefix matching"
license = "MIT"
homepage = "https://github.com/wilsonzlin/fastrie"
version = "0.0.1"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[dependencies]
