[package]
name = "fastrie"
description = "Sequentialised memory-packed associative tries, buildable at compile time, useful for longest prefix matching"
license = "MIT"
homepage = "https://github.com/wilsonzlin/fastrie"
version = "0.0.6"
authors = ["Wilson Lin <code@wilsonl.in>"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
edition = "2018"

[dependencies]
