[package]
name = "fastrie-bench"
publish = false
version = "0.0.1"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[dependencies]
fastrie = { path = ".." }
phf = { version = "0.8.0", features = ["macros"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"

[build-dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
